// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<WizardSTepButtons should add custom className to toolbar 1`] = `
<Toolbar
  className="wizard-button-toolbar foo-class"
>
  <ToolbarGroup
    className={null}
  >
    <ToolbarItem
      className={null}
    >
      <Button
        aria-label={null}
        className=""
        component="button"
        isActive={false}
        isBlock={false}
        isDisabled={false}
        isFocus={false}
        isHover={false}
        isInline={false}
        onClick={[MockFunction]}
        type="button"
        variant="secondary"
      >
        Cancel
      </Button>
    </ToolbarItem>
    <ToolbarItem
      className={null}
    >
      <Button
        aria-label={null}
        className=""
        component="button"
        isActive={false}
        isBlock={false}
        isDisabled={false}
        isFocus={false}
        isHover={false}
        isInline={false}
        onClick={[MockFunction]}
        type="button"
        variant="secondary"
      >
        Back
      </Button>
    </ToolbarItem>
    <ToolbarItem
      className={null}
    >
      <Button
        aria-label={null}
        className=""
        component="button"
        isActive={false}
        isBlock={false}
        isDisabled={false}
        isFocus={false}
        isHover={false}
        isInline={false}
        onClick={[MockFunction]}
        type="button"
        variant="primary"
      >
        Submit
      </Button>
    </ToolbarItem>
  </ToolbarGroup>
</Toolbar>
`;

exports[`<WizardSTepButtons should render correctly 1`] = `
<Toolbar
  className="wizard-button-toolbar "
>
  <ToolbarGroup
    className={null}
  >
    <ToolbarItem
      className={null}
    >
      <Button
        aria-label={null}
        className=""
        component="button"
        isActive={false}
        isBlock={false}
        isDisabled={false}
        isFocus={false}
        isHover={false}
        isInline={false}
        onClick={[MockFunction]}
        type="button"
        variant="secondary"
      >
        Cancel
      </Button>
    </ToolbarItem>
    <ToolbarItem
      className={null}
    >
      <Button
        aria-label={null}
        className=""
        component="button"
        isActive={false}
        isBlock={false}
        isDisabled={false}
        isFocus={false}
        isHover={false}
        isInline={false}
        onClick={[MockFunction]}
        type="button"
        variant="secondary"
      >
        Back
      </Button>
    </ToolbarItem>
    <ToolbarItem
      className={null}
    >
      <Button
        aria-label={null}
        className=""
        component="button"
        isActive={false}
        isBlock={false}
        isDisabled={false}
        isFocus={false}
        isHover={false}
        isInline={false}
        onClick={[MockFunction]}
        type="button"
        variant="primary"
      >
        Submit
      </Button>
    </ToolbarItem>
  </ToolbarGroup>
</Toolbar>
`;
